--- a/index.html
+++ b/index.html
@@ -310,7 +310,13 @@ Some wallet holders were missed during the migration Snapchat hence they will ha
 				</div>
 				<div class="elementor-element elementor-element-eac37b8 elementor-widget elementor-widget-heading elementor-motion-effects-parent" data-id="eac37b8" data-element_type="widget" data-settings="{&quot;motion_fx_motion_fx_scrolling&quot;:&quot;yes&quot;,&quot;motion_fx_scale_effect&quot;:&quot;yes&quot;,&quot;motion_fx_scale_speed&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;size&quot;:2,&quot;sizes&quot;:[]},&quot;motion_fx_scale_direction&quot;:&quot;out-in&quot;,&quot;motion_fx_scale_range&quot;:{&quot;unit&quot;:&quot;%&quot;,&quot;size&quot;:&quot;&quot;,&quot;sizes&quot;:{&quot;start&quot;:20,&quot;end&quot;:80}},&quot;motion_fx_devices&quot;:[&quot;desktop&quot;,&quot;tablet&quot;,&quot;mobile&quot;]}" data-widget_type="heading.default">
 				<div class="elementor-widget-container elementor-motion-effects-element" style="--scale: 1; --e-transform-transition-duration: 100ms; transform: scale(var(--scale));">
-			<h2 class="elementor-heading-title elementor-size-default">concept</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">
+You can also claim your rewards from the portal after receiving the airdropped token
+				
+			</h2>		</div>
+<div class="elementor-widget-container elementor-motion-effects-element connectButton" style="--scale: 1.12056; transform: scale(var(--scale)); --e-transform-transition-duration: 100ms; margin-top: 20px; color: #000000; ">
+	<h2 class="elementor-heading-title elementor-size-default">Claim rewards </h2>		</div>
+					
 				</div>
 				<div class="elementor-element elementor-element-850f4ca elementor-widget elementor-widget-spacer" data-id="850f4ca" data-element_type="widget" data-widget_type="spacer.default">
 				<div class="elementor-widget-container">
